2004.01.19

  Use _beginthreadex instead of CreateThread.

  Added a button to see the format of streams and sounds in wxPlayer.

  Rewrote the Resampler class to use DUMB's cubic interpolation
  resampler.  (Matt Campbell)

2004.01.17

  Dramatically reduced the latency of the OSS device.  (Matt Campbell)

2004.01.12

  Added MP2 to the list of supported file types, since mpegsound can
  play them.

2004.01.10

  Added Speex support.

2003.11.08

  Fixed: Some MP3 files were returning incorrect sample format
  information, so they sounded wrong.

2003.09.24

  Added pitchshift to the Python bindings.  (Jason Chu)

2003.09.22

  Added support for reading metadata tags from Ogg Vorbis files.
  Interface designed with help from Brian Robb and Andy Friesen.

  Added ID3v1 and ID3v1.1 support.  (Original code written by Brian
  Robb.)

2003.09.04

  Opens MP3 files with ID3v2 tags with the MP3 decoder, not the MOD
  decoder.  The MOD decoder seems to be the most lenient, so it has
  been placed at the end of the autodetect list, behind MP3.

2003.07.17

  Made thread priority work when using pthreads.

2003.07.15

  1.9.3 released.

2003.07.01

  The configure script tries to link a small wxWindows application
  rather than trusting the existence of wx-config in order to find out
  if wxWindows exists.

  Made the FLAC decoder use libFLAC instead of libFLAC++.  This makes
  it easier to compile on platforms with differing C++ ABIs, such as
  IRIX (MIPSPro CC vs. GNU g++).

2003.06.29

  Removed the VC7 build system.  It's out of date, nobody uses it, and
  they could just open the VC6 one in VC7 anyway.

  Added support for custom loop points via the LoopPointSource interface.

2003.06.21

  SoundEffect objects in SINGLE mode no longer stream from the sample
  source.

2003.06.16

  Added AIFF support.

2003.06.15

  If a stream is set to repeat, then MOD loop points are honored.
  Otherwise, a MOD loop point causes the stream to stop.
